2005-10-23  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl (::tkchat::alertWhenIdle): Add auto bookmark at
	alert point.

	* tkchat.tcl (::tkchat::BookmarkToggle): Stop auto bookmark from
	removing itself or a standard bookmark when it tried to set one
	in the same place that another already existed. Fix a race
	condition with tabs not being set (encountered while PC under
	heavy load).

	* tkchat.tcl (::tkchat::BookmarkRemoveAuto): Fix a bug that
	caused a crash when an auto bookmark tried to remove itself
	twice.

	* tkchat.tcl: Minor whitespace/style fixes.

2005-10-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added mouse binding suitable for Macs with only one
	mouse button to the user names. Added facility to ignore users
	using context menu raised from the user names list. Show user
	visibility in the names list with a disabled icon.

2005-10-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: New users were unable to setup their user
	information. Solved by ensuring that myId is always set.

2005-10-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Changed the way we use tile widgets to work with
	              tile 0.7+ as well as tile 0.6.

2005-10-16  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl (::tkchat::CreateGUI): Add auto bookmark. This is
	(::tkchat::IncrMessageCounter):     set when a message is
	(::tkchat::BookmarkInit):           received while tkchat does
	(::tkchat::BookmarkToggle):         not have focus, making it
	(::tkchat::BookmarkRemoveAuto):     easier to find the point in
	(::tkchat::BookmarkNext):           history that the user was
	(::tkchat::BookmarkPrev):           last active. Can be
	(::tkchat::BookmarkClear):          de/activated via menu.
	(::tkjabber::MsgCB):                Delayed the resetting of
	the message counter in the window title for 5 seconds. Fixed
	a bug found where deleting the current bookmark and then